# web-suck-it-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
examples/sysmetrics_reporter/: README.md  __init__.py  client.py  config.py  metrics.py  pyproject.toml  requirement.txt  server.py  socket.py  sockit.py
tests/: conftest.py  test_channel_crud.py  test_websocket.py
web_suck_it_py/: __init__.py  base.py  channel.py  constants.py  error.py  request.py  response.py  types.py  versioned_types.py
web_suck_it_py/stubs/web_suck_it_py/: __init__.pyi  base.pyi  channel.pyi  constants.pyi  error.pyi  request.pyi  response.pyi
